community/mate-indicator-applet: upgrade to 1.24.0

--- a/community/mate-indicator-applet/APKBUILD
+++ b/community/mate-indicator-applet/APKBUILD
@@ -1,26 +1,23 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=mate-indicator-applet
-pkgver=1.22.1
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="A small applet to display information from various applications consistently in the panel"
 url="https://github.com/mate-desktop/mate-indicator-applet"
 arch="all !s390x" # mate-panel -> mate-desktop
-license="GPL-3.0 LGPL-2.1"
-makedepends="autoconf automake libtool mate-common glib-dev 
+license="GPL-3.0-or-later AND LGPL-2.1-or-later"
+makedepends="autoconf automake libtool mate-common glib-dev
 	gtk+3.0-dev mate-panel-dev intltool libindicator-dev"
 subpackages="$pkgname-lang"
-source="https://pub.mate-desktop.org/releases/${pkgver%.*}/$pkgname-$pkgver.tar.xz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-indicator-applet-$pkgver.tar.xz"
 
 prepare() {
-	cd "$builddir"
 	default_prepare
 	NOCONFIGURE=1 ./autogen.sh
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -33,13 +30,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="2224e7222c36f04f78d4f5e10dfa7dffab31c687474fac605ec54795edaa7d230518168fef82459aba47e72362941b7968b94b11ccace40d8857adf605f8d8db  mate-indicator-applet-1.22.1.tar.xz"
+sha512sums="0e82f572c1855c8623e537a45c2c0c0b98d3d642e46333eedc16c26607205293098a062008d0e568890ffdf6b8dc4c30a7f5e2e41a150f940917b3671783e413  mate-indicator-applet-1.24.0.tar.xz"
