--- a/community/mate-sensors-applet/APKBUILD
+++ b/community/mate-sensors-applet/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-sensors-applet
-pkgver=1.22.1
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="Applet for the MATE Panel to display readings from hardware sensors"
 url="https://github.com/mate-desktop/mate-sensors-applet"
@@ -11,8 +11,7 @@ depends="perl-xml-parser"
 makedepends="intltool glib-dev gtk+3.0-dev mate-panel-dev libxslt-dev
 	itstool libxml2-utils mdocml-dev libnotify-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
-source="https://pub.mate-desktop.org/releases/${pkgver%.*}/$pkgname-$pkgver.tar.xz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-sensors-applet-$pkgver.tar.xz"
 
 build() {
 	./configure \
@@ -29,7 +28,7 @@ check() {
 }
 
 package() {
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="4b6e608c92f03051044863f770b295d1526b19a9668513b566e81adeb28bc8524d8f458d114d2b44acf00f20c2f0a8d86b1ca7254fa165fde3b867c75a6b83e6  mate-sensors-applet-1.22.1.tar.xz"
+sha512sums="039834b7cfe641e670e372e311da3d737254ab3cf13b27e71c6555888ac1165766fe2d940bcea44a5ceed5f0ddcd3390d01331d927121137c21a6647c68875c2  mate-sensors-applet-1.24.0.tar.xz"
