--- a/community/mate-system-monitor/APKBUILD
+++ b/community/mate-system-monitor/APKBUILD
@@ -1,16 +1,16 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-system-monitor
-pkgver=1.22.2
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="A system monitor for MATE"
 url="https://github.com/mate-desktop/mate-system-monitor"
 arch="all !s390x"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="mate-icon-theme"
 makedepends="gtk+3.0-dev libwnck3-dev gtkmm3-dev libgtop-dev
 	librsvg-dev glibmm-dev itstool linux-headers libxml2-dev
-	libxml2-utils intltool"
+	libxml2-utils intltool polkit-dev"
 subpackages="$pkgname-doc $pkgname-lang"
 source="https://pub.mate-desktop.org/releases/${pkgver%.*}/mate-system-monitor-$pkgver.tar.xz"
 
@@ -32,4 +32,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="47ccb38e27906c4de0cc18abc9d43ffc3b2c8f2f33b3f4cea3e47fd82c48870f03927fab39d323b61b9b871614b24bb2bc258d1c547650cdfb6b8eef65cb0de3  mate-system-monitor-1.22.2.tar.xz"
+sha512sums="430a2bf81f447143ba53cecb1c2659903cd957e313f6690adea363e9a8deccfd4ad64ebd8ce18dfb31a67fa7b51cbe087ffed7b5dcba5dd03b1010ec41b4d282  mate-system-monitor-1.24.0.tar.xz"
