community/mate-session-manager: upgrade to 1.24.0

--- a/community/mate-session-manager/APKBUILD
+++ b/community/mate-session-manager/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-session-manager
-pkgver=1.22.3
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="The MATE session manager"
 url="https://github.com/mate-desktop/mate-session-manager"
 arch="all !s390x" # mate-desktop
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="mate-common mate-desktop"
 makedepends="intltool libtool dconf-dev dbus-glib-dev gtk+3.0-dev
 	libsm-dev mate-desktop-dev"
@@ -30,4 +30,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="2a53722c1468c244e90632e3a949c331922e018998300ee8c5de44973e17116822d2a747b4d0d315348da9a20c011f46c2b5ea569eef0b6b90785f3df55d98f6  mate-session-manager-1.22.3.tar.xz"
+sha512sums="ee519c8ded1f2df26e62a1384439e8929942d19560c258c91010f8d34bcc7518975406fbc0a5b76d4e73e954cdc2ea106d71476e446573d4a77d2704f6cc9e37  mate-session-manager-1.24.0.tar.xz"
