community/mate-panel: upgrade to 1.24.0

--- a/community/mate-panel/APKBUILD
+++ b/community/mate-panel/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=mate-panel
-pkgver=1.22.2
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="The MATE panel is the area on your desktop from which you can run applications"
 url="https://github.com/mate-desktop/mate-panel"
 arch="all !s390x" # mate-desktop
-license="GPL-2.0-or-later LGPL-2.0-or-later"
+license="GPL-2.0-or-later AND LGPL-2.0-or-later"
 depends="mate-common mate-desktop"
 makedepends="librsvg-dev libmateweather-dev libtool intltool itstool
 	mate-menus-dev dconf-dev libice-dev libsm-dev libcanberra-dev dbus-glib-dev
@@ -32,4 +32,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="ccfd9e44116e66688d4de53c86e1a7d0754fd221b8083d7bee729f2a02a777a54b98ff70332b979aa075c157bc36c6ed6651f9190fa4a7e37b8a029a1f2a623f  mate-panel-1.22.2.tar.xz"
+sha512sums="12a88534400603998b4d4d415940947dd6372914135aa8eb6052c75e134412739a96064ad654e8f2625dbb6fe853e8cb376c41e530c30234e08141a46634820b  mate-panel-1.24.0.tar.xz"
