community/caja-extensions: upgrade to 1.24.0

--- a/community/caja-extensions/APKBUILD
+++ b/community/caja-extensions/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=caja-extensions
-pkgver=1.22.1
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="Set of extensions for Caja file manager"
 url="https://github.com/mate-desktop/caja-extensions"
 arch="all !s390x" # mate-desktop
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="caja"
 makedepends="glib-dev gtk+3.0-dev caja-dev dconf-dev
 	mate-desktop-dev intltool"
@@ -33,4 +33,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="4c0fb47a251d4118c83a985732d8a549355907519b746a68eb8843c84328d868eec1535b68484c46e3d0bf4b42f0e0340fe178714f50b5f7cc8434c0e1883906  caja-extensions-1.22.1.tar.xz"
+sha512sums="f05a7d83f16aebacb04f75b76ca86e44c1a01d9ad6c2aefeac19398c4d9da8385e6852fa0118c763aee630e7eb6c7c81d77e0c9452200aee9cf4f058487c4dbf  caja-extensions-1.24.0.tar.xz"
