--- a/community/caja/APKBUILD
+++ b/community/caja/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=caja
-pkgver=1.22.3
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="The file manager for the MATE desktop"
 url="https://github.com/mate-desktop/caja"
 arch="all !s390x" # mate-desktop is not available on s390x
-license="GPL-2.0-or-later LGPL-2.0-or-later"
+license="GPL-2.0-or-later AND LGPL-2.0-or-later"
 depends="mate-common mate-desktop"
 makedepends="$depends_dev intltool libtool dconf-dev gtk+3.0-dev libunique3-dev
 	libsm-dev libnotify-dev mate-desktop-dev libxml2-dev gobject-introspection-dev
@@ -35,4 +35,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="9063bd0a9b6fd815f76cfefd9e87eed88588821376d0c46df9cd3ea1cada828bcee4f5f2ddb42be0178ab09a4519b34bded62cebf201dbde5dda1cf3bad95c22  caja-1.22.3.tar.xz"
+sha512sums="a68b23876cfa1171d5b1c75e4998c6b15f0ceebdc4fcaabb8d362e32e35b915b1a91a38648532ac8acc162dac50aeb4d07eff417ce2db7a8c50d68bd38a0b548  caja-1.24.0.tar.xz"
