community/mate-desktop-environment: upgrade to 1.24.0

--- a/community/mate-desktop-environment/APKBUILD
+++ b/community/mate-desktop-environment/APKBUILD
@@ -1,52 +1,44 @@
-# Maintainer: 
+# Maintainer:
 pkgname=mate-desktop-environment
-pkgver=1.22.0
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="Metapackage for MATE desktop environment"
 url="http://mate-desktop.org/"
 arch="all !s390x"
 license="GPL-2.0-or-later LGPL-2.0-or-later"
 depends="caja
-	 caja-extensions
-	 marco
-	 mozo
-	 pluma
+	caja-extensions>=$pkgver
+	marco>=$pkgver
+	mozo>=$pkgver
+	pluma>=$pkgver
 
-	 mate-applets
-	 mate-backgrounds
-	 mate-control-center
-	 mate-desktop
-	 mate-icon-theme
-	 mate-media
-	 mate-menus
-	 mate-notification-daemon
-	 mate-panel
-	 mate-polkit
-	 mate-power-manager
-	 mate-screensaver
-	 mate-sensors-applet
-	 mate-session-manager
-	 mate-settings-daemon
-	 mate-system-monitor
-	 mate-terminal
-	 mate-themes
-	 mate-user-guide
-	 mate-utils
-     mate-calc
+	mate-applets>=$pkgver
+	mate-backgrounds>=$pkgver
+	mate-control-center>=$pkgver
+	mate-desktop>=$pkgver
+	mate-icon-theme>=$pkgver
+	mate-media>=$pkgver
+	mate-menus>=$pkgver
+	mate-notification-daemon>=$pkgver
+	mate-panel>=$pkgver
+	mate-polkit>=$pkgver
+	mate-power-manager>=$pkgver
+	mate-screensaver>=$pkgver
+	mate-sensors-applet>=$pkgver
+	mate-session-manager>=$pkgver
+	mate-settings-daemon>=$pkgver
+	mate-system-monitor>=$pkgver
+	mate-terminal>=$pkgver
+	mate-themes>=$pkgver
+	mate-user-guide>=$pkgver
+	mate-utils>=$pkgver
+	mate-calc>=$pkgver
 
-	 hicolor-icon-theme
-	 consolekit2
-	 "
-makedepends=""
-install=""
-subpackages=""
-source=""
+	hicolor-icon-theme
+	consolekit2
+	"
 builddir="$srcdir/"
-options="!check"
-
-build() {
-	return 0
-}
+options="!check" # Metapackage
 
 package() {
 	mkdir -p "$pkgdir"
