--- a/community/mate-control-center/APKBUILD
+++ b/community/mate-control-center/APKBUILD
@@ -8,7 +8,7 @@ url="https://github.com/mate-desktop/mate-control-center"
 arch="all !s390x" # mate-desktop
 license="GPL-2.0-or-later"
 depends="mate-common mate-menus mate-desktop mate-icon-theme desktop-file-utils"
-makedepends="dbus-glib-dev libtool intltool itstool gtk+3.0-dev
+makedepends="dbus-glib-dev libtool intltool itstool gtk+3.0-dev polkit-dev
 	dconf-dev mate-menus-dev libunique-dev marco-dev mate-settings-daemon-dev
 	libmatekbd-dev libxklavier-dev mate-desktop-dev startup-notification-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
