community/mate-tweak: upgrade to 19.10.4

--- a/community/mate-tweak/APKBUILD
+++ b/community/mate-tweak/APKBUILD
@@ -1,31 +1,27 @@
 # Contributor: Roberto Oliveira <robertoguimaraes8@gmail.com>
 # Maintainer: Roberto Oliveira <robertoguimaraes8@gmail.com>
 pkgname=mate-tweak
-pkgver=18.10.2
-pkgrel=3
+pkgver=19.10.4
+pkgrel=0
 pkgdesc="Tweak tool for the MATE Desktop"
 url="https://github.com/ubuntu-mate/mate-tweak"
 arch="noarch"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="py3-psutil py3-setproctitle"
 makedepends="python3-dev py3-distutils-extra intltool"
 subpackages="$pkgname-doc $pkgname-lang"
-source="$pkgname-$pkgver.tar.gz::https://github.com/ubuntu-mate/$pkgname/archive/$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/ubuntu-mate/mate-tweak/archive/$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
 check() {
-	cd "$builddir"
 	python3 setup.py check
 }
 
 package() {
-	cd "$builddir"
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="5207ad0cc73ed79a761c7e745cb428ab0e338fe35d07fefcad18ed8a43cfa14b96cacc2da05fa7b48b57e90fef10eae6ce40693451d65dfd64c36fd800a71e9c  mate-tweak-18.10.2.tar.gz"
+sha512sums="3bf189bd5b8227a6322a678b65c15db91ecf6c73302985ea6b10250c6a89557d1ee80335b5aa173b84f2eb212067224d9cb5993f990491b0cd0a5704a5f2d9c5  mate-tweak-19.10.4.tar.gz"
