testing/deja-dup: fix dependencies

--- a/testing/deja-dup/APKBUILD
+++ b/testing/deja-dup/APKBUILD
@@ -8,8 +8,9 @@ url="https://wiki.gnome.org/Apps/DejaDup"
 arch="all !s390x" # Nautilus
 license="GPL-3.0-or-later"
 makedepends="meson gtk+3.0-dev gnome-online-accounts-dev json-glib-dev
-	nautilus-dev libsecret-dev libsoup-dev vala itstool"
-checkdepends="appstream-glib desktop-file-utils coreutils diffutils"
+	nautilus-dev libsecret-dev libsoup-dev vala itstool appstream-glib
+	desktop-file-utils"
+checkdepends="coreutils diffutils"
 subpackages="$pkgname-lang $pkgname-doc"
 source="https://gitlab.gnome.org/World/deja-dup/-/archive/$pkgver/deja-dup-$pkgver.tar.gz"
 options="!check" # fail hard on builders, work on CI and locally
