--- a/testing/py3-language-server/APKBUILD
+++ b/testing/py3-language-server/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname="py3-language-server"
-pkgver="0.31.7"
+pkgver="0.31.8"
 pkgrel=0
 pkgdesc="An implementation of the Language Server Protocol for Python"
 url="https://github.com/palantir/python-language-server"
 arch="noarch"
 license="MIT"
-depends="python3 py3-wheel py3-ujson py3-pydocstyle py3-jsonrpc-server py3-jedi py3-parso py3-setuptools"
+depends="python3 py3-wheel py3-ujson py3-pydocstyle py3-jsonrpc-server py3-jedi py3-parso py3-setuptools py3-pluggy"
 checkdepends="py3-pytest py3-mock py3-pycodestyle py3-pyflakes py3-mccabe
 	py3-autopep8 py3-pylint py3-python-versioneer py3-pytest-cov py3-coverage
 	py3-numpy py3-pandas py3-matplotlib py3-qt5 py3-yapf py3-rope"
@@ -26,4 +26,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="f160631701f9795e089a89d811b9924bf2256dca5ca149cf1b5f506885a45fb77667ac3755f328343ea652eba21ac16f442532237cd78c49cb419a89a1d6e1f7  python-language-server-0.31.7.tar.gz"
+sha512sums="d6569ac39d96c78485d87b5ed3e60a10f45e43ed7961260a426a4356a4923a4aef366b088db3964f1aa87a2e95b21ed9d17094d1b1c5154c72fc8371e61f24d8  python-language-server-0.31.8.tar.gz"
