testing/py3-aiohttp-session: upgrade to 2.9.0

--- a/testing/py3-aiohttp-session/APKBUILD
+++ b/testing/py3-aiohttp-session/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-aiohttp-session
 _pkgname=aiohttp_session
-pkgver=2.2.0
-pkgrel=3
+pkgver=2.9.0
+pkgrel=0
 pkgdesc="Sessions support for aiohttp"
 url="https://aiohttp-session.readthedocs.io/"
 arch="noarch"
@@ -12,22 +12,19 @@ license="Apache-2.0"
 options="!check"
 depends="py3-aiohttp"
 makedepends="python3-dev py3-setuptools"
-source="aiohttp-session-${pkgver}.tar.gz::https://github.com/aio-libs/aiohttp-session/archive/v$pkgver.tar.gz"
+source="aiohttp-session-$pkgver.tar.gz::https://github.com/aio-libs/aiohttp-session/archive/v$pkgver.tar.gz"
 builddir="$srcdir"/aiohttp-session-$pkgver
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
 check() {
-	cd "$builddir"
 	python3 setup.py test
 }
 
 package() {
-	cd "$builddir"
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="6215276cb1df0d8db7845ad016895a330835e97f1e6bf58700e090f8b6856dc919743b903ae23cdb091cf280df60954cf4c09ade00ee1471ff4d8901718a8d71  aiohttp-session-2.2.0.tar.gz"
+sha512sums="27c1c1553bfb65e8d277ada226917835ea92dd0593c28988a8800a275fd7ec7c304f10ebb18320fe582e92440ac6b2621ca5eb2f3a3cd5ef1b068fe41ae178fa  aiohttp-session-2.9.0.tar.gz"
