testing/zimwriterfs: upgrade to 1.3.8

--- a/testing/zimwriterfs/APKBUILD
+++ b/testing/zimwriterfs/APKBUILD
@@ -1,16 +1,15 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=zimwriterfs
-pkgver=1.3.7
-pkgrel=1
+pkgver=1.3.8
+pkgrel=0
 pkgdesc="Console tool to create ZIM files"
 url="https://openzim.org/"
 arch="all"
 license="GPL-3.0-or-later"
 makedepends="meson gumbo-parser-dev file-dev libzim-dev"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/openzim/$pkgname/archive/$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/openzim/zimwriterfs/archive/$pkgver.tar.gz"
 
 build() {
 	meson \
@@ -33,4 +32,4 @@ package() {
 	install -Dm 644 -t "$pkgdir/usr/share/doc/$pkgname" README.md
 }
 
-sha512sums="a390701724ead27113a79dee83dc7821f9f17f4f9fdd8d971273c6ceb85dbb2b2fa663d15211e6994ebf6e77cc09d9befa1c6f486390f14efad61f63c9d77c0d  zimwriterfs-1.3.7.tar.gz"
+sha512sums="7e2893f81b68a624a8308ef6fcfcf39eee1e2c3af28d15bb2f42c5dcfd62027eb04eea900407d910379f28ff7cc1bda0035d649c90e8f5dc21c81c0390b87adf  zimwriterfs-1.3.8.tar.gz"
