main/postgresql: drop python2 package
Closes !3228

--- a/main/postgresql/APKBUILD
+++ b/main/postgresql/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=postgresql
 pkgver=12.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A sophisticated object-relational DBMS"
 url="https://www.postgresql.org/"
 arch="all"
@@ -15,11 +15,10 @@ pkggroups="postgres"
 checkdepends="diffutils"
 depends_dev="openssl-dev"
 makedepends="$depends_dev libedit-dev zlib-dev libxml2-dev util-linux-dev
-	openldap-dev tcl-dev perl-dev python2-dev python3-dev linux-headers"
+	openldap-dev tcl-dev perl-dev python3-dev linux-headers"
 subpackages="$pkgname-contrib $pkgname-dev $pkgname-doc libpq $pkgname-libs
 	$pkgname-client $pkgname-pltcl
 	$pkgname-plperl $pkgname-plperl-contrib:plperl_contrib
-	$pkgname-plpython2 $pkgname-plpython2-contrib:plpython2_contrib
 	$pkgname-plpython3 $pkgname-plpython3-contrib:plpython3_contrib"
 source="https://ftp.postgresql.org/pub/source/v$pkgver/$pkgname-$pkgver.tar.bz2
 	initdb.patch
@@ -75,36 +74,12 @@ prepare() {
 	local file; for file in $pkgname.initd $pkgname.confd; do
 		sed "s|@VERSION@|${pkgver%.*}|" "$srcdir"/$file > $file
 	done
-
-	cp -al "$builddir" "$builddir"~py3
 }
 
-# NOTE: plpython requires separate configure/build runs to build against
-# python 2 versus python 3. Note that the installed Makefile.global will
-# reflect the python 2 build, which seems appropriate since that's still
-# considered the default plpython version.
 build() {
-	msg "Building plpython3"
-
-	cd "$builddir"~py3
-	export PYTHON=/usr/bin/python3
-
-	_configure
-	make -C src/pl/plpython all
-
-
-	msg "Building all"
-
 	cd "$builddir"
-	export PYTHON=/usr/bin/python2
 
-	_configure && make world
-
-	unset PYTHON
-}
-
-# Note: (...) instead of {...} is NOT a typo!
-_configure() (
+	export PYTHON=/usr/bin/python3
 	export CFLAGS="${CFLAGS/-Os/-O2}"
 	export CPPFLAGS="${CPPFLAGS/-Os/-O2}"
 
@@ -123,7 +98,8 @@ _configure() (
 		--with-perl \
 		--with-python \
 		--with-tcl
-)
+	make world
+}
 
 check() {
 	cd "$builddir"
@@ -240,37 +216,18 @@ plperl_contrib() {
 	make -C contrib/hstore_plperl DESTDIR="$subpkgdir" install
 }
 
-plpython2() {
-	pkgdesc="PL/Python2 procedural language for PostgreSQL"
-	depends="python2"
-
-	_submv usr/lib/postgresql/plpython2.so \
-		usr/share/postgresql/extension/plpython*
-}
-
-plpython2_contrib() {
-	_plcontrib plpython2 "PL/Python 2"
-
-	cd "$builddir"
-	make -C contrib/hstore_plpython DESTDIR="$subpkgdir" install
-	make -C contrib/ltree_plpython DESTDIR="$subpkgdir" install
-
-	rm "$subpkgdir"/usr/share/postgresql/extension/*plpython3*
-}
-
 plpython3() {
 	pkgdesc="PL/Python3 procedural language for PostgreSQL"
 	depends="python3"
 
-	cd "$builddir"~py3
-	make -C src/pl/plpython DESTDIR="$subpkgdir" install
-	rm -R "$subpkgdir"/usr/include
+	_submv usr/lib/postgresql/plpython3.so \
+		usr/share/postgresql/extension/plpython*
 }
 
 plpython3_contrib() {
 	_plcontrib plpython3 "PL/Python 3"
 
-	cd "$builddir"~py3
+	cd "$builddir"
 	make -C contrib/hstore_plpython DESTDIR="$subpkgdir" install
 	make -C contrib/ltree_plpython DESTDIR="$subpkgdir" install
 
