main/postgresql: replace custom _submv with amove

--- a/main/postgresql/APKBUILD
+++ b/main/postgresql/APKBUILD
@@ -130,7 +130,7 @@ package() {
 dev() {
 	default_dev
 
-	_submv usr/bin/pg_config \
+	amove usr/bin/pg_config \
 		usr/bin/ecpg \
 		usr/lib/postgresql/pgxs
 }
@@ -139,7 +139,7 @@ libpq() {
 	pkgdesc="PostgreSQL libraries"
 	depends=""
 
-	_submv usr/lib/libpq.so.*
+	amove usr/lib/libpq.so.*
 }
 
 libs() {
@@ -194,7 +194,7 @@ pltcl() {
 	pkgdesc="PL/Tcl procedural language for PostgreSQL"
 	depends="pgtcl"
 
-	_submv usr/lib/postgresql/pltcl.so \
+	amove usr/lib/postgresql/pltcl.so \
 		usr/share/postgresql/extension/pltcl*
 
 	install -m 644 "$srcdir"/pltcl_create_tables.sql \
@@ -205,7 +205,7 @@ plperl() {
 	pkgdesc="PL/Perl procedural language for PostgreSQL"
 	depends=""
 
-	_submv usr/lib/postgresql/plperl.so \
+	amove usr/lib/postgresql/plperl.so \
 		usr/share/postgresql/extension/plperl*
 }
 
@@ -220,7 +220,7 @@ plpython3() {
 	pkgdesc="PL/Python3 procedural language for PostgreSQL"
 	depends="python3"
 
-	_submv usr/lib/postgresql/plpython3.so \
+	amove usr/lib/postgresql/plpython3.so \
 		usr/share/postgresql/extension/plpython*
 }
 
@@ -255,13 +255,6 @@ _run_tests() {
 		done
 		return 1
 	}
-}
-
-_submv() {
-	local path; for path in "$@"; do
-		mkdir -p "$subpkgdir/${path%/*}"
-		mv "$pkgdir"/$path "$subpkgdir"/${path%/*}/
-	done
 }
 
 sha512sums="f45b1762fd60b6f7419305d108b7fc521e3a7afa833d3aacccba814465baf40d19f57ff9bf2909d726c4c94a1cd99a39f1aa8e45fd0364cdedbcbed36ff48caf  postgresql-12.1.tar.bz2
