testing/php7-pecl-mongodb: upgrade to 1.7.2

--- a/testing/php7-pecl-mongodb/APKBUILD
+++ b/testing/php7-pecl-mongodb/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Fabio Ribeiro <fabiorphp@gmail.com>
 pkgname=php7-pecl-mongodb
 _pkgreal=mongodb
-pkgver=1.7.1
+pkgver=1.7.2
 _pkgver=${pkgver/_rc/RC}
 pkgrel=0
 pkgdesc="PHP7 MongoDB driver"
@@ -11,8 +11,7 @@ arch="all"
 license="Apache-2.0"
 depends="php7-json"
 makedepends="cyrus-sasl-dev icu-dev openssl-dev pcre-dev php7-dev re2c snappy-dev"
-source="https://pecl.php.net/get/$_pkgreal-$_pkgver.tgz
-	fix-ssl.patch"
+source="https://pecl.php.net/get/$_pkgreal-$_pkgver.tgz"
 builddir="$srcdir"/$_pkgreal-$_pkgver
 provides="php7-mongodb=$pkgver-r$pkgrel" # for backward compatibility
 replaces="php7-mongodb" # for backward compatibility
@@ -37,5 +36,4 @@ package() {
 	echo "extension=$_pkgreal.so" > $confdir/$_pkgreal.ini
 }
 
-sha512sums="c40dcde291e85e61ee7b299d2e160c1118e184686771f8f9acbfbfb5a0ffac019287bc6ba8e06a24ed93d843b947816230c50bc06d74a7dfc56bc7244ef83ba9  mongodb-1.7.1.tgz
-042316b14cea5aad842cfb5efaeef88af6dac379bc82140701336094d1c05220feabd5997fe16886fd221cd450127ec7f89fdd7d906aabae955eedc2d08f0506  fix-ssl.patch"
+sha512sums="66f486c12ad919b0b653ed31a5f782258501e5585aa99698e6c4367a1a8bcd8c1985ad3993da17ae984b630a4e24746022b7dc407d22da2e3d61213042a36261  mongodb-1.7.2.tgz"
