--- a/testing/rtl8821ce-lts/APKBUILD
+++ b/testing/rtl8821ce-lts/APKBUILD
@@ -6,7 +6,7 @@ _krel=0
 _flavor="$FLAVOR"
 [ -z "$_flavor" ] && _flavor=lts
 
-pkgname="rtl8821ce-module-linux-lts"
+pkgname="rtl8821ce-lts"
 pkgver="0_git20200211"
 _commit=74c454f7af8ec3426cc6a937f37c562c10f49bd2
 pkgrel=0
@@ -42,4 +42,4 @@ package() {
 		"$pkgdir"/lib/module/$_kver-$_krel-$_flavor/extra/8821ce.ko
 }
 
-sha512sums="8de5f2ddfa84a72e4ff3d2a1450201b628c82dc4a163b9329f448f4088510f63ff5997da51d2fbb2be306bed752fa77d9d4920cb08d4fb410c82b578d995f19c  rtl8821ce-module-linux-lts-0_git20200211.tar.gz"
+sha512sums="8de5f2ddfa84a72e4ff3d2a1450201b628c82dc4a163b9329f448f4088510f63ff5997da51d2fbb2be306bed752fa77d9d4920cb08d4fb410c82b578d995f19c  rtl8821ce-lts-0_git20200211.tar.gz"
