testing/gkraken: fix startup

--- a/testing/gkraken/APKBUILD
+++ b/testing/gkraken/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gkraken
 pkgver=0.13.0
-pkgrel=0
+pkgrel=1
 pkgdesc="GUI that allows to control cooling of NZXT Kraken X pumps from Linux"
 url="https://gitlab.com/leinardi/gkraken"
 arch="noarch"
@@ -13,7 +13,8 @@ depends="python3 libdazzle libnotify py3-gobject3 py3-rx liquidctl py3-injector
 makedepends="meson gobject-introspection-dev gtk+3.0-dev"
 options="!check" # no tests
 source="https://gitlab.com/leinardi/gkraken/-/archive/$pkgver/gkraken-$pkgver.tar.gz
-	60-gkraken.rules"
+	60-gkraken.rules
+	no-gettext-python-support.patch"
 
 build() {
 	meson \
@@ -34,4 +35,5 @@ package() {
 }
 
 sha512sums="615d3104d258cde08a9cfa1625a6c9368ab1788fb5777ab897c744e88ea1fb4cf8f6edd20395645bffe2171cc6c4e21c10ddfe66c7657184edd0c374f7bfae56  gkraken-0.13.0.tar.gz
-ef8a079e1232777f537e18dbced2192fe7a0b30ae821ceb96b825b50a76f0890a13b5cf062a8fcc77a9c545c39ff28adc987b1dbce021e327675ceb1bbbed883  60-gkraken.rules"
+ef8a079e1232777f537e18dbced2192fe7a0b30ae821ceb96b825b50a76f0890a13b5cf062a8fcc77a9c545c39ff28adc987b1dbce021e327675ceb1bbbed883  60-gkraken.rules
+2b255e29e50fae08880f99940c2f4eeba59da7371f6874adf2607895909c1bd274cd149d56d0530041c67ceeafa4b028cf47c6b0605fc1dede00104bb0e6b4e5  no-gettext-python-support.patch"
