testing/liquidctl: downgrade to 1.1.0
This is required for gkraken

--- a/testing/liquidctl/APKBUILD
+++ b/testing/liquidctl/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=liquidctl
-pkgver=1.3.2
+pkgver=1.1.0
 pkgrel=0
 pkgdesc="Liquid Cooler Control"
 url="https://github.com/jonasmalacofilho/liquidctl"
 arch="noarch"
 license="GPL-3.0-or-later"
 depends="python3 py3-setuptools py3-docopt py3-usb py3-hidapi"
-source="https://github.com/jonasmalacofilho/liquidctl/releases/download/v$pkgver/liquidctl-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/jonasmalacofilho/liquidctl/archive/v$pkgver.tar.gz"
 
 build() {
 	python3 setup.py build
@@ -22,4 +22,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="7c69f77d469c46380d0ba2ddf66a53555f95d2078368a4518f86f7d749afde0ca90b008cdc40f99be271684dd3138f966b116332b396f5ac8a9d1de53de456ae  liquidctl-1.3.2.tar.gz"
+sha512sums="ea09d2bd53d130098b8ded57629dc44769cca2383a866f347c7237a21d8e2d3e6c501859fe57951eefd4f0161e2cb83c58582ba29b5d3b6dc3ef77585002866e  liquidctl-1.1.0.tar.gz"
