community/gst-plugins-good: remove -qt subpkg on armhf

--- a/community/gst-plugins-good/APKBUILD
+++ b/community/gst-plugins-good/APKBUILD
@@ -6,7 +6,7 @@ pkgdesc="GStreamer streaming media framework good plug-ins"
 url="https://gstreamer.freedesktop.org"
 arch="all"
 license="GPL-2.0-or-later LGPL-2.0-or-later"
-subpackages="$pkgname-lang $pkgname-qt $pkgname-gtk"
+subpackages="$pkgname-lang $pkgname-gtk"
 replaces="gst-plugins-good1"
 makedepends="cairo-dev flac-dev gdk-pixbuf-dev glib-dev gst-plugins-base-dev
 	gstreamer-dev gtk+3.0-dev jack-dev lame-dev libavc1394-dev libcaca-dev
@@ -20,7 +20,10 @@ options="!check" # elements/souphttpsrc fails
 
 case "$CARCH" in
 	armhf) ;;
-	*) makedepends="$makedepends qt5-qtdeclarative-dev qt5-qtx11extras-dev" ;;
+	*)
+		makedepends="$makedepends qt5-qtdeclarative-dev qt5-qtx11extras-dev"
+		subpackages="$subpackages $pkgname-qt"
+	;;
 esac
 
 # secfixes:
