main/perl-sys-mmap: upgrade to 0.20

--- a/main/perl-sys-mmap/APKBUILD
+++ b/main/perl-sys-mmap/APKBUILD
@@ -2,28 +2,30 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-sys-mmap
 _realname=Sys-Mmap
-pkgver=0.19
-pkgrel=4
+pkgver=0.20
+pkgrel=0
 pkgdesc="Uses mmap to map in a file as a Perl variable"
-url="http://search.cpan.org/~toddr/Sys-Mmap-$pkgver/"
+url="https://metacpan.org/pod/Sys::Mmap"
 arch="all"
-license="GPL PerlArtistic"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 depends="perl"
 makedepends="perl-dev"
-install=
 subpackages="$pkgname-doc"
-source="https://cpan.metacpan.org/authors/id/S/SW/SWALTERS/$_realname-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/T/TO/TODDR/Sys-Mmap-$pkgver.tar.gz"
+builddir="$srcdir/Sys-Mmap-$pkgver"
 
-_builddir="$srcdir/$_realname-$pkgver"
 build() {
-	cd $_builddir
-	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor || return 1
-	make && make test || return 1
+	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
+	make
 }
+
+check() {
+	make test
+}
+
 package() {
-	cd $_builddir
 	make DESTDIR="$pkgdir" install
 	# creates file collision among perl modules
 	find "$pkgdir" -name perllocal.pod -delete
 }
-sha512sums="4e6409cddd13322b4cdaad832e6d0233776e51098b499fd05d8e642e547eb1ed7add5bb9fb339e69048a3293140098e282b51698eb6d188ace71ad58c1628556  Sys-Mmap-0.19.tar.gz"
+sha512sums="7afe9e1be26d75bbc818d3deb51e0ba751c2711f8503a77882d3d207b1c37e4867fe79e5757193ba058ed395ba955406d8af3f195ce5dff5b4b29748d9d86f5f  Sys-Mmap-0.20.tar.gz"
