main/freeradius: remove unnecessary $_realname

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -3,7 +3,6 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=freeradius
-_realname=freeradius
 pkgver=3.0.20
 pkgrel=3
 pkgdesc="RADIUS (Remote Authentication Dial-In User Service) server"
@@ -23,7 +22,7 @@ subpackages="$pkgname-dbg $pkgname-doc $pkgname-dev $pkgname-ldap $pkgname-lib
 	$pkgname-unixodbc $pkgname-pam $pkgname-eap $pkgname-krb5
 	$pkgname-rest $pkgname-redis $pkgname-checkrad"
 provides="freeradius3=$pkgver-r$pkgrel"
-source="ftp://ftp.freeradius.org/pub/freeradius/$_realname-server-$pkgver.tar.gz
+source="ftp://ftp.freeradius.org/pub/freeradius/$pkgname-server-$pkgver.tar.gz
 	$pkgname.confd
 	$pkgname.initd
 
@@ -33,7 +32,7 @@ source="ftp://ftp.freeradius.org/pub/freeradius/$_realname-server-$pkgver.tar.gz
 	Fix-permissions-of-certs-in-bootstrap-fallback.patch
 	fix-request_running-segfault.patch
 	"
-builddir="$srcdir"/$_realname-server-$pkgver
+builddir="$srcdir/$pkgname-server-$pkgver"
 
 # secfixes:
 #   3.0.19-r3:
