--- a/testing/py3-avro/APKBUILD
+++ b/testing/py3-avro/APKBUILD
@@ -2,14 +2,14 @@
 # Contributor: Gennady Feldman <gena01@gmail.com>
 pkgname=py3-avro
 _pkgname=avro
-pkgver=1.9.1
-pkgrel=1
+pkgver=1.9.2
+pkgrel=0
 pkgdesc="Avro is a serialization and RPC framework."
 url="https://avro.apache.org/"
 arch="noarch"
 license="Apache-2.0"
 depends="py3-six"
-makedepends="py3-setuptools"
+makedepends="py3-setuptools py3-pycodestyle"
 source="$pkgname-$pkgver.tar.gz::http://github.com/apache/$_pkgname/archive/release-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-release-$pkgver/lang/py3"
 
@@ -25,4 +25,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="7732ac648b99bede4c57610e2db0bf229e5c672da255c0cd3f09272b0f6d4851fd93e60bc8661a1629fc7140d1596067215108cf5a10d81629bb404f478c68d2  py3-avro-1.9.1.tar.gz"
+sha512sums="6a6980901eea964c050eb3d61fadf28712e2f02c36985bf8e5176b668bba48985f6a666554a1964435448de29b18d790ab86b787d0288a22fd9cba00746a7846  py3-avro-1.9.2.tar.gz"
