main/freeradius: fix code-style
Mainly curly braces around variables.

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -96,132 +96,135 @@ build() {
 
 package() {
 	install -d -m0750 -o root -g radius \
-		"${pkgdir}"${_radconfdir}
+		"$pkgdir"$_radconfdir
+
 	install -d -m0750 -o radius -g radius \
-		"$pkgdir"/var/run/radius
-	install -d -m0750 -o radius -g radius \
-		"$pkgdir"/var/log/radius
-	install -d -m0750 -o radius -g radius \
+		"$pkgdir"/var/run/radius \
+		"$pkgdir"/var/log/radius \
 		"$pkgdir"/var/log/radius/radacct
 
 	PACKAGE=yes make -j1 R="$pkgdir" install
+
 	chown -R root:radius "$pkgdir"/etc/raddb/*
 	rm -f "$pkgdir"/usr/sbin/rc.radiusd
-	install -m755 -D "$srcdir"/$pkgname.initd \
-		"$pkgdir"/etc/init.d/radiusd
-	install -m644 -D "$srcdir"/$pkgname.confd \
-		"$pkgdir"/etc/conf.d/radiusd
-	#Install misses to create this
-	mkdir -p "${pkgdir}"${_radmodsconfdir}/sql/ippool-dhcp/postgresql
-}
 
-_mvdb() {
-	for dir in ippool-dhcp ippool counter main cui; do
-		mkdir -p "${subpkgdir}"${_radmodsconfdir}/sql/$dir
-		mv "${pkgdir}"${_radmodsconfdir}/sql/$dir/$1 \
-		 "${subpkgdir}"${_radmodsconfdir}/sql/$dir
-	done
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"${_radlibdir}/rlm_sql_${1}.so "${subpkgdir}"${_radlibdir}
+	install -m755 -D "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/radiusd
+	install -m644 -D "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/radiusd
+
+	# Install misses to create this
+	mkdir -p "$pkgdir"$_radmodsconfdir/sql/ippool-dhcp/postgresql
 }
 
 eap() {
+	pkgdesc="EAP module for FreeRADIUS server"
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-eap=$pkgver-r$pkgrel"
-	pkgdesc="EAP module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir} "$subpkgdir"/usr/bin
-	mv "${pkgdir}"${_radlibdir}/rlm_eap*.so "${subpkgdir}"${_radlibdir}
-	mv "$pkgdir"/usr/bin/radeapclient "$subpkgdir"/usr/bin
-	mkdir -p "${subpkgdir}"${_radmodsdir} "$subpkgdir"$_radconfdir/mods-enabled
-	mv "${pkgdir}"${_radmodsdir}/eap "${subpkgdir}"${_radmodsdir}
+
+	mkdir -p "$subpkgdir"$_radlibdir "$subpkgdir"/usr/bin
+	mv "$pkgdir"$_radlibdir/rlm_eap*.so "$subpkgdir"$_radlibdir/
+	mv "$pkgdir"/usr/bin/radeapclient "$subpkgdir"/usr/bin/
+
+	mkdir -p "$subpkgdir"$_radmodsdir "$subpkgdir"$_radconfdir/mods-enabled
+	mv "$pkgdir"$_radmodsdir/eap "$subpkgdir"$_radmodsdir/
 	mv "$pkgdir"$_radconfdir/mods-enabled/eap \
 		"$subpkgdir"$_radconfdir/mods-enabled/
 
-	mkdir -p "${subpkgdir}"${_radconfdir}
-	mv "${pkgdir}"${_radconfdir}/certs "${subpkgdir}"${_radconfdir}
+	mkdir -p "$subpkgdir"$_radconfdir
+	mv "$pkgdir"$_radconfdir/certs "$subpkgdir"$_radconfdir/
 }
 
 ldap() {
+	pkgdesc="LDAP module for FreeRADIUS server"
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-ldap=$pkgver-r$pkgrel"
-	pkgdesc="LDAP module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"${_radlibdir}/rlm_ldap* "${subpkgdir}"${_radlibdir}
+
+	mkdir -p "$subpkgdir"$_radlibdir
+	mv "$pkgdir"$_radlibdir/rlm_ldap* "$subpkgdir"$_radlibdir/
 }
 
 krb5() {
+	pkgdesc="Kerberos module for FreeRADIUS server"
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-krb5=$pkgver-r$pkgrel"
-	pkgdesc="Kerberos module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"${_radlibdir}/rlm_krb5* "${subpkgdir}"${_radlibdir}
+
+	mkdir -p "$subpkgdir"$_radlibdir
+	mv "$pkgdir"$_radlibdir/rlm_krb5* "$subpkgdir"$_radlibdir/
 }
 
 lib() {
-	depends=""
 	pkgdesc="Freeradius shared libraries"
-	mkdir -p "${subpkgdir}"${_radlibdir} "${subpkgdir}"${_radconfdir} \
-	 "$subpkgdir"/usr/share/freeradius
-	mv "${pkgdir}"${_radlibdir}/libfreeradius-*.so \
-	 "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"/usr/share/freeradius/* \
-	 "${subpkgdir}"/usr/share/freeradius
+	depends=""
+
+	mkdir -p "$subpkgdir"$_radlibdir \
+		"$subpkgdir"$_radconfdir \
+		"$subpkgdir"/usr/share/freeradius
+
+	mv "$pkgdir"$_radlibdir/libfreeradius-*.so "$subpkgdir"$_radlibdir/
+	mv "$pkgdir"/usr/share/freeradius/* "$subpkgdir"/usr/share/freeradius/
 }
 
 sql() {
+	pkgdesc="SQL module for FreeRADIUS server"
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-sql=$pkgver-r$pkgrel"
-	pkgdesc="SQL module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	for lib in sql sqlippool sql_null sqlcounter; do
-		mv "${pkgdir}"${_radlibdir}/rlm_${lib}.so \
-			"${subpkgdir}"${_radlibdir}
+
+	mkdir -p "$subpkgdir"$_radlibdir
+	local lib; for lib in sql sqlippool sql_null sqlcounter; do
+		mv "$pkgdir"$_radlibdir/rlm_$lib.so "$subpkgdir"$_radlibdir/
 	done
-	mkdir -p "${subpkgdir}"${_radconfdir}/sites-available
-	mv "${pkgdir}"${_radconfdir}/sites-available/buffered-sql \
-	 "${subpkgdir}"${_radconfdir}/sites-available
-	mkdir -p "${subpkgdir}"${_radmodsdir}
-	mv "${pkgdir}"${_radmodsdir}/*sql* "${subpkgdir}"${_radmodsdir}
+
+	mkdir -p "$subpkgdir"$_radconfdir/sites-available
+	mv "$pkgdir"$_radconfdir/sites-available/buffered-sql \
+		"$subpkgdir"$_radconfdir/sites-available/
+
+	mkdir -p "$subpkgdir"$_radmodsdir
+	mv "$pkgdir"$_radmodsdir/*sql* "$subpkgdir"$_radmodsdir/
 }
 
 mysql() {
+	pkgdesc="MySQL module for FreeRADIUS server"
 	depends="freeradius-sql=$pkgver-r$pkgrel"
 	provides="freeradius3-mysql=$pkgver-r$pkgrel"
-	pkgdesc="MySQL module for FreeRADIUS server"
+
 	_mvdb mysql
 }
 
 mssql() {
+	pkgdesc="MSSQL module for FreeRADIUS server"
 	depends="freeradius-sql=$pkgver-r$pkgrel"
 	provides="freeradius3-mssql=$pkgver-r$pkgrel"
-	pkgdesc="MSSQL module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radmodsconfdir}/sql/main
-	mv "${pkgdir}"${_radmodsconfdir}/sql/main/mssql \
-	 "${subpkgdir}"${_radmodsconfdir}/sql/main
+
+	mkdir -p "$subpkgdir"$_radmodsconfdir/sql/main
+	mv "$pkgdir"$_radmodsconfdir/sql/main/mssql \
+		"$subpkgdir"$_radmodsconfdir/sql/main/
 }
 
 perl() {
+	pkgdesc="Perl module for FreeRADIUS server"
 	depends="freeradius=$pkgver-r$pkgrel perl"
 	provides="freeradius3-perl=$pkgver-r$pkgrel"
-	pkgdesc="Perl module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"${_radlibdir}/rlm_perl* "${subpkgdir}"${_radlibdir}
-	mkdir -p "${subpkgdir}"${_radconfdir}/mods-available
-	mv "${pkgdir}"${_radconfdir}/mods-available/perl \
-		"${subpkgdir}"${_radconfdir}/mods-available/perl
+
+	mkdir -p "$subpkgdir"$_radlibdir
+	mv "$pkgdir"$_radlibdir/rlm_perl* "$subpkgdir"$_radlibdir/
+
+	mkdir -p "$subpkgdir"$_radconfdir/mods-available
+	mv "$pkgdir"$_radconfdir/mods-available/perl \
+		"$subpkgdir"$_radconfdir/mods-available/perl
 }
 
 checkrad() {
-	depends="perl perl-net-telnet perl-snmp-session net-snmp-tools"
 	pkgdesc="Check if a user is (still) logged in on a certain port"
+	depends="perl perl-net-telnet perl-snmp-session net-snmp-tools"
+
 	mkdir -p "$subpkgdir"/usr/sbin
 	mv "$pkgdir"/usr/sbin/checkrad "$subpkgdir"/usr/sbin/checkrad
 }
 
 postgresql() {
+	pkgdesc="PostgreSQL module for FreeRADIUS server"
 	depends="freeradius-sql=$pkgver-r$pkgrel"
 	provides="freeradius3-postgresql=$pkgver-r$pkgrel"
-	pkgdesc="PostgreSQL module for FreeRADIUS server"
+
 	_mvdb postgresql
 }
 
@@ -229,58 +232,75 @@ python() {
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-python=$pkgver-r$pkgrel"
 	pkgdesc="Python module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"${_radlibdir}/rlm_python* "${subpkgdir}"${_radlibdir}
-	for dir in $_radmodsdir $_radmodsconfdir; do
-		mkdir -p "${subpkgdir}"$dir
-		mv "${pkgdir}"$dir/python3 "${subpkgdir}"$dir
+
+	mkdir -p "$subpkgdir"$_radlibdir
+	mv "$pkgdir"$_radlibdir/rlm_python* "$subpkgdir"$_radlibdir/
+
+	local dir; for dir in $_radmodsdir $_radmodsconfdir; do
+		mkdir -p "$subpkgdir"$dir
+		mv "$pkgdir"$dir/python3 "$subpkgdir"$dir/
 	done
 }
 
 radclient() {
+	pkgdesc="Client for FreeRADIUS server"
 	depends=""
 	provides="freeradius3-radclient=$pkgver-r$pkgrel"
-	pkgdesc="Client for FreeRADIUS server"
+
 	mkdir -p "$subpkgdir"/usr/bin
 	mv "$pkgdir"/usr/bin/radclient "$subpkgdir"/usr/bin/radclient
 }
 
 sqlite() {
+	pkgdesc="SQLite module for FreeRADIUS server"
 	depends="freeradius-sql=$pkgver-r$pkgrel"
 	provides="freeradius3-sqlite=$pkgver-r$pkgrel"
-	pkgdesc="SQLite module for FreeRADIUS server"
+
 	_mvdb sqlite
 }
 
 unixodbc() {
+	pkgdesc="ODBC module for FreeRADIUS server"
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-unixodbc=$pkgver-r$pkgrel"
-	pkgdesc="ODBC module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"${_radlibdir}/rlm_sql_unixodbc.so \
-		"${subpkgdir}"${_radlibdir}
+
+	mkdir -p "$subpkgdir"$_radlibdir
+	mv "$pkgdir"$_radlibdir/rlm_sql_unixodbc.so "$subpkgdir"$_radlibdir/
 }
 
 pam() {
+	pkgdesc="PAM module for FreeRADIUS server"
 	depends="freeradius=$pkgver-r$pkgrel"
 	provides="freeradius3-pam=$pkgver-r$pkgrel"
-	pkgdesc="PAM module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"${_radlibdir}/rlm_pam* "${subpkgdir}"${_radlibdir}
+
+	mkdir -p "$subpkgdir"$_radlibdir
+	mv "$pkgdir"$_radlibdir/rlm_pam* "$subpkgdir"$_radlibdir/
 }
 
 rest() {
-	depends="freeradius=$pkgver-r$pkgrel"
 	pkgdesc="REST module for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"${_radlibdir}/rlm_rest* "${subpkgdir}"${_radlibdir}
+	depends="freeradius=$pkgver-r$pkgrel"
+
+	mkdir -p "$subpkgdir"$_radlibdir
+	mv "$pkgdir"$_radlibdir/rlm_rest* "$subpkgdir"$_radlibdir/
 }
 
 redis() {
-	depends="freeradius=$pkgver-r$pkgrel"
 	pkgdesc="Redis modules for FreeRADIUS server"
-	mkdir -p "${subpkgdir}"${_radlibdir}
-	mv "${pkgdir}"${_radlibdir}/rlm_redis* "${subpkgdir}"${_radlibdir}
+	depends="freeradius=$pkgver-r$pkgrel"
+
+	mkdir -p "$subpkgdir"$_radlibdir
+	mv "$pkgdir"$_radlibdir/rlm_redis* "$subpkgdir"$_radlibdir/
+}
+
+_mvdb() {
+	local dir; for dir in ippool-dhcp ippool counter main cui; do
+		mkdir -p "$subpkgdir"$_radmodsconfdir/sql/$dir
+		mv "$pkgdir"$_radmodsconfdir/sql/$dir/$1 \
+			"$subpkgdir"$_radmodsconfdir/sql/$dir
+	done
+	mkdir -p "$subpkgdir"$_radlibdir
+	mv "$pkgdir"$_radlibdir/rlm_sql_$1.so "$subpkgdir"$_radlibdir/
 }
 
 sha512sums="513ed0a5d9e6b9a8d89a9b02c86ff528a9ff14d928f4c1040ca44702465abd711588fe6afa35554cb2c8e8bd7f19dd5be3dbc78445c62c7b00bf5cbc4c621312  freeradius-server-3.0.20.tar.gz
