main/freeradius: reformat $makedepends and $subpackages

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -9,18 +9,56 @@ pkgdesc="RADIUS (Remote Authentication Dial-In User Service) server"
 url="https://freeradius.org/"
 arch="all"
 license="GPL-2.0-or-later"
-makedepends="openssl-dev mariadb-connector-c-dev postgresql-dev gdbm-dev readline-dev
-	bash libtool autoconf automake perl-dev python3-dev openldap-dev krb5-dev
-	unixodbc-dev linux-pam-dev sqlite-dev talloc-dev libpcap-dev
-	linux-headers curl-dev hiredis-dev json-c-dev net-snmp-tools"
+makedepends="
+	autoconf
+	automake
+	bash
+	curl-dev
+	gdbm-dev
+	hiredis-dev
+	json-c-dev
+	krb5-dev
+	libpcap-dev
+	libtool
+	linux-headers
+	linux-pam-dev
+	mariadb-connector-c-dev
+	net-snmp-tools
+	openldap-dev
+	openssl-dev
+	perl-dev
+	postgresql-dev
+	python3-dev
+	readline-dev
+	sqlite-dev
+	talloc-dev
+	unixodbc-dev
+	"
 pkggroups="radius"
 pkgusers="radius"
 install="$pkgname.pre-install"
-subpackages="$pkgname-dbg $pkgname-doc $pkgname-dev $pkgname-ldap $pkgname-lib
-	$pkgname-mssql $pkgname-mysql $pkgname-sql $pkgname-perl
-	$pkgname-postgresql $pkgname-python $pkgname-radclient $pkgname-sqlite
-	$pkgname-unixodbc $pkgname-pam $pkgname-eap $pkgname-krb5
-	$pkgname-rest $pkgname-redis $pkgname-checkrad"
+subpackages="
+	$pkgname-dbg
+	$pkgname-doc
+	$pkgname-dev
+	$pkgname-ldap
+	$pkgname-lib
+	$pkgname-mssql
+	$pkgname-mysql
+	$pkgname-sql
+	$pkgname-perl
+	$pkgname-postgresql
+	$pkgname-python
+	$pkgname-radclient
+	$pkgname-sqlite
+	$pkgname-unixodbc
+	$pkgname-pam
+	$pkgname-eap
+	$pkgname-krb5
+	$pkgname-rest
+	$pkgname-redis
+	$pkgname-checkrad
+	"
 provides="freeradius3=$pkgver-r$pkgrel"
 source="ftp://ftp.freeradius.org/pub/freeradius/$pkgname-server-$pkgver.tar.gz
 	$pkgname.confd
